--- a/src/index.css
+++ b/src/index.css
@@ -6,5 +6,6 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #121212;
+  color: white;
 }
 
