--- a/src/components/NavbarBeforeLogin.css
+++ b/src/components/NavbarBeforeLogin.css
@@ -9,6 +9,7 @@
 }
 
 .logo-image {
+    margin-left: 20px;
     height: 40px;
 }
 
@@ -16,4 +17,5 @@
     color: #fff;
     text-decoration: none;
     margin-left: 20px;
+    margin-right: 20px;
 }
