--- a/src/components/NavbarBeforeLogin.css
+++ b/src/components/NavbarBeforeLogin.css
@@ -2,7 +2,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #121212;
+    background-color: rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(5px);
     color: #fff;
     padding: 10px 20px;
     
@@ -15,6 +16,8 @@
 
 .nav-links a {
     color: #fff;
+    font-size: large;
+    font-weight: 600;
     text-decoration: none;
     margin-left: 20px;
     margin-right: 20px;
